Add custom Gutenberg blocks and enhance theme functionality
- Introduced multiple custom blocks for the Biederman theme, including Show Featured, Show List, Press Assets, and Booking Email blocks.
- Implemented server-side rendering for blocks to improve performance and SEO.
- Added meta boxes for custom post types (Shows and Press Assets) to manage additional data.
- Updated the README.md with instructions for building blocks and using the new features.
- Enhanced the theme's Docker configuration to support Node.js for block development.
- Included new styles and scripts for improved block editor experience and frontend presentation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,18 @@ services:
     ports:
       - "8080:80"
 
+  node:
+    image: node:18
+    container_name: biederman-wp-node
+    working_dir: /app
+    volumes:
+      - ./biederman-wp:/app
+    networks:
+      - wordpress-network
+    command: tail -f /dev/null
+    profiles:
+      - build
+
 volumes:
   db_data:
   wordpress_data:
@@ -41,4 +53,3 @@ volumes:
 networks:
   wordpress-network:
     driver: bridge
-
