Update GitHub Actions workflow to allow for error continuation
- Added 'continue-on-error: true' to the Node.js setup step in the build-theme.yml workflow to prevent workflow failure on node version issues.

--- a/.github/workflows/build-theme.yml
+++ b/.github/workflows/build-theme.yml
@@ -19,6 +19,7 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: biederman-wp/package-lock.json
+        continue-on-error: true
       
       - name: Check for package-lock.json
         working-directory: ./biederman-wp
