Update GitHub Actions workflow to enhance release process
- Changed the step name from 'Create GitHub Release' to 'Upload to GitHub Release' for clarity.
- Added 'tag_name' input to specify the release tag during upload.
- Updated 'prerelease' input to dynamically reflect the release status from the event.

--- a/.github/workflows/build-theme.yml
+++ b/.github/workflows/build-theme.yml
@@ -81,13 +81,14 @@ jobs:
           path: biederman-wp-theme.zip
           retention-days: 30
       
-      - name: Create GitHub Release
+      - name: Upload to GitHub Release
         if: github.event_name == 'release'
         uses: softprops/action-gh-release@v1
         with:
           files: biederman-wp-theme.zip
+          tag_name: ${{ github.event.release.tag_name }}
           draft: false
-          prerelease: false
+          prerelease: ${{ github.event.release.prerelease }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
