Update GitHub Actions workflow to modify version in style.css and include theme updater
- Added a step to update the version in style.css during the release event, ensuring the theme version is accurately reflected in the CSS file.
- Included the theme updater functionality in functions.php to facilitate future updates.

--- a/.github/workflows/build-theme.yml
+++ b/.github/workflows/build-theme.yml
@@ -67,6 +67,17 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Extracted version: $VERSION"
       
+      - name: Update version in style.css
+        if: github.event_name == 'release'
+        working-directory: ./biederman-wp
+        run: |
+          VERSION="${{ steps.version.outputs.version }}"
+          # Update Version line in style.css (Linux sed syntax for GitHub Actions)
+          sed -i "s/Version:.*/Version: $VERSION/" style.css
+          echo "Updated style.css version to $VERSION"
+          # Verify the change
+          grep "Version:" style.css
+      
       - name: Create theme ZIP
         working-directory: ./
         id: create-zip
